--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ header .sp_nav {
   width: 47px;
   z-index: 3;
   text-align: center;
+  position: fixed;
 }
 .hamburger span:nth-child(1),
 .hamburger span:nth-child(2)
